Working on JavaFX implementation